feat: Add illustration image generation api connect with frontend